--- a/app/src/main/res/layout/layout_update_information.xml
+++ b/app/src/main/res/layout/layout_update_information.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_phone"
+                android:id="@+id/edt_user_phone"
                 android:focusable="false"
                 android:hint="Phone"
                 android:layout_width="match_parent"
