--- a/app/src/main/res/layout/activity_login_with_phone_number.xml
+++ b/app/src/main/res/layout/activity_login_with_phone_number.xml
@@ -1,38 +1,67 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    tools:context=".LoginWithPhoneNumberActivity">
 
-    <EditText
-        android:id="@+id/phone_number"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter phone number"
-        android:inputType="phone"
-        android:layout_marginBottom="16dp" />
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    <Button
-        android:id="@+id/send_otp_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Send OTP" />
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/logo"
+            android:layout_width="220dp"
+            android:layout_height="220dp" />
 
-    <EditText
-        android:id="@+id/otp_code"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter OTP"
-        android:inputType="number"
-        android:visibility="gone"
-        android:layout_marginTop="16dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    <Button
-        android:id="@+id/verify_otp_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Verify OTP"
-        android:visibility="gone" />
+            <EditText
+                android:id="@+id/phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter phone number"
+                android:inputType="phone"
+                android:layout_marginBottom="16dp" />
 
-</LinearLayout>
+            <Button
+                android:id="@+id/send_otp_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Send OTP" />
+
+            <EditText
+                android:id="@+id/otp_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter OTP"
+                android:maxLength="6"
+                android:inputType="number"
+                android:visibility="gone"
+                android:layout_marginTop="16dp" />
+
+            <Button
+                android:id="@+id/verify_otp_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Verify OTP"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
