--- a/app/src/main/res/layout/fragment_booking_step3.xml
+++ b/app/src/main/res/layout/fragment_booking_step3.xml
@@ -18,6 +18,11 @@
 <!--        android:layout_height="wrap_content"/>-->
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCalendar"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_time_slot"
         android:layout_marginTop="12dp"
         android:layout_width="match_parent"
